Added outdated note to README

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
+NOTE: This project is outdated. Use is not recommended. It is kept online as a reminder of the code I wrote several years ago, making the stuff I do now look good.
+
 Toolbox
 =======
 
-Tools frequently used at AG Webdesign. Proper documentation pending.
+Tools frequently used at AG Webdesign.
 
 Copyright (c) 2008 Arjan van der Gaag, released under the MIT license
